--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-async-timeout==4.0.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-defusedxml==0.7.1
-idna==3.4
-ifaddr==0.2.0
+async-timeout
+certifi
+charset-normalizer
+defusedxml
+idna
+ifaddr
 librespot @ git+https://github.com/kokarare1212/librespot-python
-music-tag==0.4.3
-mutagen==1.46.0
-packaging==23.1
-Pillow==9.5.0
-protobuf==3.20.1
-pycryptodomex==3.17
-PyOgg==0.6.14a1
+music-tag
+mutagen
+packaging
+Pillow
+protobuf
+pycryptodomex
+PyOgg
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.1
 PyQt5-stubs==5.15.6.0
-pyxdg==0.28
-requests==2.30.0
-show-in-file-manager==1.1.4
-urllib3==2.0.2
-websocket-client==1.5.1
-zeroconf==0.62.0
+pyxdg
+requests
+show-in-file-manager
+urllib3
+websocket-client
+zeroconf
